@@ -2,16 +2,11 @@
 
 package edu.colorado.phet.balancingchemicalequations;
 
-import java.awt.Frame;
-
 import edu.colorado.phet.balancingchemicalequations.control.BCEOptionMenu;
 import edu.colorado.phet.balancingchemicalequations.module.balanceequation.BalanceEquationModule;
 import edu.colorado.phet.balancingchemicalequations.module.game.GameModule;
-import edu.colorado.phet.common.phetcommon.application.Module;
 import edu.colorado.phet.common.phetcommon.application.PhetApplicationConfig;
 import edu.colorado.phet.common.phetcommon.application.PhetApplicationLauncher;
-import edu.colorado.phet.common.phetcommon.model.Property;
-import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.piccolophet.PiccoloPhetApplication;
 
 /**
@@ -21,33 +16,18 @@ import edu.colorado.phet.common.piccolophet.PiccoloPhetApplication;
  */
 public class BalancingChemicalEquationsApplication extends PiccoloPhetApplication {
 
-    private final Property<Boolean> moleculesVisibleProperty = new Property<Boolean>( true );
-
     public BalancingChemicalEquationsApplication( PhetApplicationConfig config ) {
         super( config );
 
+        // Global settings
+        BCEGlobalProperties globalProperties = new BCEGlobalProperties( getPhetFrame(), config.isDev() );
+
         // modules
-        Frame parentFrame = getPhetFrame();
-        addModule( new BalanceEquationModule( this, parentFrame, config.isDev() ) );
-        addModule( new GameModule( this, parentFrame, config.isDev() ) );
+        addModule( new BalanceEquationModule( globalProperties ) );
+        addModule( new GameModule( globalProperties ) );
 
         // Options menu
-        getPhetFrame().addMenu( new BCEOptionMenu( moleculesVisibleProperty ) );
-
-        // Global property observers
-        moleculesVisibleProperty.addObserver( new SimpleObserver() {
-            public void update() {
-                for ( Module module : getModules() ) {
-                    if ( module instanceof BCEModule ) {
-                        ( (BCEModule) module ).setMoleculesVisible( moleculesVisibleProperty.getValue() );
-                    }
-                }
-            }
-        } );
-    }
-
-    public void resetGlobals() {
-        moleculesVisibleProperty.reset();
+        getPhetFrame().addMenu( new BCEOptionMenu( globalProperties.getMoleculesVisibleProperty() ) );
     }
 
     public static void main( final String[] args ) throws ClassNotFoundException {
