@@ -2,7 +2,13 @@
 
 package edu.colorado.phet.balancingchemicalequations.module.game;
 
+import java.awt.Color;
+
+import edu.colorado.phet.balancingchemicalequations.BCEGlobalProperties;
 import edu.colorado.phet.balancingchemicalequations.view.BCECanvas;
+import edu.colorado.phet.common.phetcommon.model.Resettable;
+import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
+import edu.colorado.phet.common.piccolophet.nodes.ResetAllButtonNode;
 
 /**
  * Canvas for the "Game" module.
@@ -11,12 +17,25 @@ import edu.colorado.phet.balancingchemicalequations.view.BCECanvas;
  */
 public class GameCanvas extends BCECanvas {
 
-    public GameCanvas( GameModel model ) {
-        //XXX
-    }
+    public GameCanvas( GameModel model, BCEGlobalProperties globalProperties, Resettable resettable ) {
+        super( globalProperties.getCanvasColorProperty() );
 
-    public void setMoleculesVisible( boolean moleculesVisible ) {
-        //XXX
+        // Reset All button
+        ResetAllButtonNode resetAllButtonNode = new ResetAllButtonNode( resettable, globalProperties.getFrame(), 12, Color.BLACK, Color.WHITE );
+        resetAllButtonNode.addResettable( globalProperties );
+        addChild( resetAllButtonNode );
+
+        // layout
+        double x = 0;
+        double y = 0;
+        resetAllButtonNode.setOffset( x, y );
+
+        // Observers
+        globalProperties.getMoleculesVisibleProperty().addObserver( new SimpleObserver() {
+            public void update() {
+                // TODO hide molecules
+            }
+        } );
     }
 
     public void reset() {
